# claude-updater

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.github/workflows/: release.yml
src/claude_updater/: __init__.py  __main__.py  analyzer.py  cache.py  cli.py  config.py  display.py  hooks.py  remote.py  runner.py
src/claude_updater/adapters/: __init__.py  base.py  beads_cli.py  beads_plugin.py  claude_code.py  claude_mem.py  claude_updater.py  dolt.py
tests/: conftest.py  test_adapters.py  test_analyzer.py  test_cache.py  test_config.py  test_hooks.py  test_release_notes.py  test_remote.py  test_runner.py
