[project]
name = "claude-updater"
version = "0.0.0.dev0"
description = "Multi-tool update checker for the Claude Code ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60.0",
]
keywords = ["claude-code", "updater", "mcp", "plugins"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
claude-updater = "claude_updater.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_updater"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
